[package]
name = "teleconsole"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# termion = "1.5"
# tui = { version = "0.17", default-features = false, features = ['termion'] }
crossterm = "0.22.1"
tui = "0.17"
grammers-client = {git = "https://github.com/Lonami/grammers/", branch="master"}
grammers-session = {git = "https://github.com/Lonami/grammers/", branch="master"}
tokio = {version="1.17", features=["rt", "rt-multi-thread", "sync", "macros", "signal", "time"]}
thiserror = "1.0"